@@ -1,4 +1,5 @@
 0.23
+ - Update Module::Install to 1.19 version.
 
 0.22 2016-10-05T07:40:15+02:00
  - Remove name for CHOROBA (pull request from E. Choroba :-)
